
Engine
* Triggers
** New: Added a trigger method for Players gaining Debuffs only.
** New: Added a trigger method for Units gaining buffs and debuffs via Unique Buff IDs.
** Note: Buffs and Debuffs will be entirely separate eventually. This is a first case test used for Sicaron's Unholy Contract change.

Options
* Screen Alerts
** Fixed: The option "Show Anchor (for positioning)" was not unlocking the text until you closed then re-opened the options screen.

CastBars
* Change: Castbars will no long be interactive while the Menu Screen is not open.

Hammerknell Fortress
* Matron Zamira
** New: Mechanic Spy added for Mark of Oblivion.
* Sicaron
** New: Mechanic Spy added for Unholy Contract Buff. (uses new engine trigger, testing required)
** New: Mechanic Spy added for Unholy Contract Debuff. (uses new engine trigger, testing required)
** New: Mechanic Spy added for Ravaged Soul purge debuff. (uses new engine trigger, testing required)
* Akylios & Jornaru
** New: Mechanic Spy added for Mind Decay.
** New: Mechanic Spy added for Suffocating Orb.

River of Souls
* Dark Foci
** New: Mechanic Spy added for Destabilize Soul.
* Warmaster Galenir
** New: Mechanic Spy added for Essence Transfer.
* Herald Gaurath
** New: Mechanic Spy added for Tidings of Woe.
* Plutonus the Immortal
** New: Mechanic Spy added for Walking Sleep.
* Alsbeth the Discordant
** New: Soul Destruction alert now stops as soon as interrupted.
** New: Mechanic Spy added for Punish Soul.
** New: Mechanic Spy added for Discordant Meteor.
** Change: Dicordant Meteor now triggers from the notify message and not the cast.

Greenscale's Blight
* Oracle Aleria
** New: Mechanic Spy added for Necrotic Eruption.
* Lord Greenscale
** New: Greenscale's HP monitoring in the Phase Monitor is now carried over during Air Phases.
** Fixed: Added a clause in the Air Phase trigger. It would triggering twice when Greenscale was healed by adds.

Rise of the Pheonix
* Ereandorn